add OOG configuration

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lemon Restaurant</title>
+    <meta
+      name="description"
+      content="Get all your sports fishing equipment at One Place Fishing. Open Monday to Friday, 9 to 5, in the Great Lake area."
+    />
+
+    <meta name="og:title" content="One Place Fishing" />
+    <meta
+      name="og:description"
+      content="Reservation Booking System @ Lemon Restaurant "
+    />
+    <meta
+      name="og:image"
+      content="https://example.com/one-place-fishing-store.jpg"
+    />
+
+    <meta property="og:url" content="https://example.com/page-url" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Site Name" />
   </head>
   <body>
     <div id="root"></div>
